--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,15 @@ url:
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
 
+prose:
+  media: 'images'
+  metadata:
+    _posts:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "post"
+
 #
 # !! You don't need to change any of the configuration flags below !!
 #
